--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
 
 <body>
   <div class="container">
+<div class="image-container">
 
-    <!-- <div class="main-img"> -->
+  <!-- <div class="main-img"> -->
     <img src="./images/image-equilibrium.jpg" alt="img" class="main-img">
+    <div class="overlay"></div>
+    <img src="images/icon-view.svg" alt="view icon" class="view">
     <!-- </div> -->
+  </div>
     <h2>
       Equilibrium #3429
     </h2>
